Add User module (#1)
